# mcp2210-hidapi

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  gemini.generated.c  hidapi_mesa_connector.c  main.c  main.h.in  mcp2210-hidapi-misc.h  mcp2210-hidapi.c  mcp2210-hidapi.h
docs/: README.md
include/mcp2210-hidapi/: mcp2210-hidapi-debug.h  mcp2210-hidapi-gpio.h  mcp2210-hidapi-misc.h  mcp2210-hidapi-spi.h  mcp2210-hidapi.h
src/: CMakeLists.txt  mcp2210-hidapi-gpio.c  mcp2210-hidapi-misc.c  mcp2210-hidapi-spi.c  mcp2210-hidapi.c
